2018-10-17  Charlie Zender  <zender@uci.edu>

	* Re-process NO2.F90

	* Protect ss_alb_fct from underflow

2018-10-16  Charlie Zender  <zender@uci.edu>

	* Default NO2 to use NCAR data (which has no quantuum yields)

	* Subroutinize absorption cross-section retrieval in abs_xsx_get()

	* Full support for CFC12

2018-10-15  Charlie Zender  <zender@uci.edu>

	* Subroutinize band parameter retrieval in mlk_bnd_prm_get()

	* Use wvl_bnd_lw_sw to set LW/SW boundary for diffusivity approximation and transmission diagnostics

2018-10-13  Charlie Zender  <zender@uci.edu>

	* swnb2 now works in LW! Underpredicts surface LW by ~35 W/m2

	* Implement diffusivity_factor=1.66 for LW angular integration

	* Expanding range of Malkmus files from 2000 to 0 cm-1, i.e., including entire LW

2018-10-10  Charlie Zender  <zender@uci.edu>

	* Finish O3 support for HITRAN .xsc files, add CFC11 support

2018-10-09  Charlie Zender  <zender@uci.edu>

	* Add most functionality needed to support HITRAN .xsc files

2018-10-06  Charlie Zender  <zender@uci.edu>

	* Prevent mmr_CO, mmr_OH, mmr_NO2 etc from being zero in any layer, otherwise Malkmus band model needs protection or will fail

2018-10-05  Charlie Zender  <zender@uci.edu>

	* Implement option to use NC_DOUBLE instead of NC_FLOAT in htrn2nb.F90

2018-10-04  Charlie Zender  <zender@uci.edu>

	* Adapt swnb2 to use new split HC and HHCWC inputs and verify BFB with before split

	* Convert O3.F90 for O3 and O2 into O3.F90 for O3 and O2.F90 for O2

2018-10-03  Charlie Zender  <zender@uci.edu>

	* CO and N2O both cause matrix near-singular errors in DISORT, and NaNf fluxes on Linux and memory errors on MacOS

	* Include default profiles and line-absorption by CO, N2O

2018-10-02  Charlie Zender  <zender@uci.edu>

	* Utilize temperature dependence of O3 cross-sections in each layer

	* Expand bnd_nbr_max for all gases to accomodate new 2500/5000 band Malkmus files

	* Adopt new convention .par filename = hitran16_YYYYMMDD.txt
