@@ -5729,7 +5729,7 @@ Molecular collisions occur in two senses, the kinetic and the
 optical. 
 A collision might change the kinetic energy of one or both of the
 molecules, but this is not neccessary. 
-Collisions which do alter the kinetic energy of one or both of the 
+Collisions that do alter the kinetic energy of one or both of the 
 particpants are \trmdfn{kinetic collisions}. 
 Collisions may also cause a radiative excitation or de-excitation
 of the radiative energy levels of either or both of the molecules
@@ -5737,13 +5737,13 @@ involved.
 Collisional de-excitation, for example, might release one vibrational
 quanta of energy without changing the kinetic energy of either of the
 molecules.  
-Collisions which alter the rotational or vibrational quanta of one or
+Collisions that alter the rotational or vibrational quanta of one or
 both of the particpants are called \trmdfn{optical collisions}.
 Rotational energy levels are, in general, much smaller than
 translational energy levels and thus optical collisions may occur more
 frequently than kinetic collisions.
 
-Many methods of determining the pressure broadened line shape have
+Many methods of determining the pressure-broadened line shape have
 been proposed.
 A particularly satisfying model is that of molecules radiating with
 constant intensity between elastic collisions that change the phase 
@@ -5989,7 +5989,7 @@ Also the optical collision diameter $\xsxopt$ is missing.}
 where the summation is over all perturber species $\iii$ (i.e., \Od,
 \Nd, \ldots) and $\mss$ is the mass of the absorber.
 Thus $\hwhmprs$ depends quadratically (fxm: typo, must be linear) upon
-the number density of collision partners and linearly upon the
+the number-density of collision partners and linearly upon the
 velocity of the molecules (note the factor of $\sqrt{\cstblt \tpt}$). 
 A scaling approximation is therefore frequently used to extrapolate
 $\hwhmprs(\tpt)$ based on some measured or tabulated value
@@ -6024,7 +6024,7 @@ This is exactly analogous to the relation between $\tauxct$ and
 $\hwhmntr$ (\ref{eqn:hwhm_ntr_dfn}) because both processes are
 described by the Lorentz line shape.
 
-When natural and collision broadening are considered simultaneously,
+When natural- and collision-broadening are considered simultaneously,
 it can be shown that the combined line shape is also a Lorentzian with
 HWHM $\Hwhmlrn/4\mpi$ (\ref{eqn:lnshp_lrn_Hwhm_dfn}).
 The parameter $\Hwhmlrn$ is related to both the natural line width and
@@ -6038,13 +6038,13 @@ the mean frequency of collisions $\frqcll = \taucll^{-1}$
 These relations may be proved by examining the power spectrum of a
 sinusoidal electric field which is randomly interrupted $\frqcll$ times
 per second. 
-In practice in the lower atmosphere $\hwhmprs >> \hwhmntr$ so the
+In practice in the lower atmosphere $\hwhmprs \gg \hwhmntr$ so the
 Lorentz line width is nearly equivalent to the pressure-broadened
 line width.
 Therefore, \trmidx{Lorentz broadening} and the \trmidx{Lorentz line  
 width} will hereafter refer to the Lorentzian line shape
-(\ref{eqn:lnshp_lrn_dfn}) due to the convolution of natural and
-collision broadening.  
+(\ref{eqn:lnshp_lrn_dfn}) due to the convolution of natural- and
+collision-broadening.  
 With reference to (\ref{eqn:Hwhm_lrn_dfn}) and
 (\ref{eqn:tau_opt_dfn}) 
 \begin{eqnarray}
@@ -6190,7 +6190,7 @@ and $1-\me^{-2} = 0.954$, respectively.
 
 \subsubsection[Voigt Line Shape]{Voigt Line Shape}\label{sxn:lnshp_vgt}
 Line broadening processes occur simultaneously in nature. 
-In particular, \trmidx{Collision broadening} occurs in tandem with  
+In particular, \trmidx{Collision-broadening} occurs in tandem with  
 \trmidx{Doppler broadening}.
 If we assume these two processes are independent but occur
 simulateously, then the net line shape of the total process will be
@@ -9320,7 +9320,7 @@ The optical depth from level $\zzz$ to space is
 \subsubsection[H-C-G Approximation]{van~de~Hulst-Curtis-Godson Approximation}\label{sxn:HCG}
 The general problem is to account for the effects of inhomogeneous
 mass, temperature, and pressure paths on transmission.
-We shall attempt to determine an \trmdfn{scaled absorber path}
+We shall attempt to determine a \trmdfn{scaled absorber path}
 $\abspthscl$, \trmdfn{scaled temperature} $\tptpthscl$, and
 \trmdfn{scaled pressure} $\prspthscl$ such that $\abspthscl$, 
 $\tptpthscl$, and $\prspthscl$ yield optimal results when employed
@@ -9341,7 +9341,7 @@ $\tpt$.
 This stands to reason since $\prs$ changes by many orders of magnitude
 from the surface to space, while $\tpt$ generally changes by less than
 30\%.
-Thus the usualy practice, which is often adeequate, is to set
+Thus the usual practice, often adeequate, is to set
 $\tptpthscl$ equal to the mean temperature along a path, 
 \begin{eqnarray}
 % GoY89 p. 224 (6.22) Lio92 p. 60
@@ -9355,7 +9355,7 @@ on $\abspthscl$.
 This will prove useful afterwards in developing the two parameter
 H-C-G approximation.
 
-Consider an the absorption optical depth through an arbitrary
+Consider the absorption optical depth through an arbitrary
 inhomogeneous atmosphere whose mass absorption coefficient
 $\abscffmss(\prs,\tpt)$ (\ref{eqn:abs_mss_dfn}) depends only on $\tpt$ 
 and $\prs$. 
@@ -9501,7 +9501,7 @@ and $\psiscloftpt$ to quadratic polynomials in temperature
 \end{align}
 \end{subequations}
 The linear term dominates (\ref{eqn:phi_scl_pzn}) since $\phiscloftpt$ 
-(\ref{eqn:phi_scl_dpp}) depends most exponentially on 
+(\ref{eqn:phi_scl_dpp}) depends mostly exponentially on 
 $\tpt$ (\ref{eqn:lnstr_scl}), i.e., $\phiscla \gg \phisclb$.
 On the other hand the quadratic term is important in
 (\ref{eqn:psi_scl_pzn}) since $\psiscloftpt$ (\ref{eqn:fxm}) 
@@ -9544,7 +9544,7 @@ interest:
 and $\psiscla$ and $\psisclb$ are defined analogously.
 
 In practice SWNB adjusts all band parameters from the
-\acr{HITRAN}-standard temperature (296\,K) to 250\,K, which is near
+\acr{HITRAN}-standard temperature (296\,K) to 250\,K, roughly
 the mass-weighted mean temperature of Earth's atmosphere.
 This reduces any biases caused by non-quadratic temperature-dependent
 behavior of the logarithms of $\phiscloftpt$ and $\psiscloftpt$
