@@ -8682,7 +8682,7 @@ A Retrospective, Iterative, Geometry-Based (RIGB) tilt correction method for rad
 
 @Article{WZV181,
   author = 	 {Wenshan Wang and Charles S. Zender and Dirk van~As},
-  title = 	 {Temporal Characteristics of Cloud Radiative Effects on {Greenland}: Discoveries from Multi-year Automatic Weather Station Measurements},
+  title = 	 {Temporal Characteristics of Cloud Radiative Effects on the {Greenland} Ice Sheet: Discoveries from Multiyear Automatic Weather Station Measurements},
   titleold = 	 {Temporal Characteristics of Cloud Radiative Effects on Greenland's Surface Energy Budget During Melt Season: Discoveries from Multi-year Automatic Weather Station Measurements},
   titleold = 	 {Evaluating spatial distributions of melt-season cloud radiative effects from satellite observation, reanalyses, and model simulation against in-situ measurements over Greenland},
   title1 = 	 {Spatial distribution of melt-season cloud radiative effects over Greenland: Evaluating satellite observations, reanalyses, and model simulations against in-situ measurements},
@@ -8694,8 +8694,9 @@ A Retrospective, Iterative, Geometry-Based (RIGB) tilt correction method for rad
   journal = 	 {Submitted to \textit{J.~Geophys.\ Res.\ Atm.}},
   year = 	 2018,
   key = 	 {Wang18},
-  txtnote =      {Wang, W., C. S. Zender, and D. van As (2018), Temporal Characteristics of Cloud Radiative Effects on Greenland: Discoveries from Multi-year Automatic Weather Station Measurements, Submitted to J. Geophys. Res. Atm..},
-  latexnote =    {$^{*}$\textbf{Wang,~W.}, \textbf{C.~S. Zender}, and D.~van~As (2018), Temporal Characteristics of Cloud Radiative Effects on Greenland: Discoveries from Multi-year Automatic Weather Station Measurements, \textit{sub judice, J.~Geophys.\ Res.\ Atm.}.},
+  txtnote =      {Wang, W., C. S. Zender, and D. van As (2018), Temporal Characteristics of Cloud Radiative Effects on the Greenland Ice Sheet: Discoveries from Multiyear Automatic Weather Station Measurements, J. Geophys. Res. Atm., 123, doi:10.1029/2018JD028540.},
+  htmlnote =     {Wang,&nbsp;W., C.&nbsp;S. Zender, and D.&nbsp;van&nbsp;As (2018), Temporal Characteristics of Cloud Radiative Effects on the Greenland Ice Sheet: Discoveries from Multiyear Automatic Weather Station Measurements, <i>J.&nbsp;Geophys. Res.&nbsp;Atm.</i>, <b>123</b>, doi:10.1029/2018JD028540.},
+  latexnote =    {$^{*}$\textbf{Wang,~W.}, \textbf{C.~S. Zender}, and D.~van~As (2018), Temporal Characteristics of Cloud Radiative Effects on the {Greenland} Ice Sheet: Discoveries from Multiyear Automatic Weather Station Measurements, \textit{J.~Geophys.\ Res.\ Atm.}, \textbf{123}, doi:10.1029/2018JD028540.},
   wwwnote =      {scp ~/foo dust.ess.uci.edu:Sites/ppr/ppr_WZV181.bib},
   annote = 	 {snw cv crm aws alb grn}
 }
